--- a/diet-problem.ipynb
+++ b/diet-problem.ipynb
@@ -15,7 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyomo import environ\n",
+    "from pyomo import environ as pyo\n",
+    "from pyomo.dataportal import DataPortal\n",
+    "from pyomo.opt import SolverFactory\n",
     "\n",
     "infinity = float(\"inf\")"
    ]
@@ -65,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = environ.AbstractModel()"
+    "model = pyo.AbstractModel()"
    ]
   },
   {
@@ -81,12 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.F = environ.Set()  # Foods\n",
-    "model.N = environ.Set()  # Nutrients"
+    "model.F = pyo.Set()  # Foods\n",
+    "model.N = pyo.Set()  # Nutrients"
    ]
   },
   {
@@ -98,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.c = environ.Param(model.F, within=environ.PositiveReals)\n",
-    "model.a = environ.Param(model.F, model.N, within=environ.NonNegativeReals)\n",
-    "model.Nmin = environ.Param(model.N, within=environ.NonNegativeReals, default=0.0)\n",
-    "model.Nmax = environ.Param(model.N, within=environ.NonNegativeReals, default=infinity)\n",
-    "model.V = environ.Param(model.F, within=environ.PositiveReals)\n",
-    "model.Vmax = environ.Param(within=environ.PositiveReals)"
+    "model.c = pyo.Param(model.F, within=pyo.PositiveReals)\n",
+    "model.a = pyo.Param(model.F, model.N, within=pyo.NonNegativeReals)\n",
+    "model.Nmin = pyo.Param(model.N, within=pyo.NonNegativeReals, default=0.0)\n",
+    "model.Nmax = pyo.Param(model.N, within=pyo.NonNegativeReals, default=infinity)\n",
+    "model.V = pyo.Param(model.F, within=pyo.PositiveReals)\n",
+    "model.Vmax = pyo.Param(within=pyo.PositiveReals)"
    ]
   },
   {
@@ -119,11 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.x = environ.Var(model.F, within=environ.NonNegativeIntegers)"
+    "model.x = pyo.Var(model.F, within=pyo.NonNegativeIntegers)"
    ]
   },
   {
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
     "    return sum(model.c[i] * model.x[i] for i in model.F)\n",
     "\n",
     "\n",
-    "model.cost = environ.Objective(rule=cost_rule)"
+    "model.cost = pyo.Objective(rule=cost_rule)"
    ]
   },
   {
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,8 +170,8 @@
     "    return sum(model.V[i] * model.x[i] for i in model.F) <= model.Vmax\n",
     "\n",
     "\n",
-    "model.nutrient_limit = environ.Constraint(model.N, rule=nutrient_rule)\n",
-    "model.volume = environ.Constraint(rule=volume_rule)"
+    "model.nutrient_limit = pyo.Constraint(model.N, rule=nutrient_rule)\n",
+    "model.volume = pyo.Constraint(rule=volume_rule)"
    ]
   },
   {
@@ -181,59 +183,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "param:  F:                          c     V  :=\n",
-      "  \"Cheeseburger\"                 1.84   4.0  \n",
-      "  \"Ham Sandwich\"                 2.19   7.5  \n",
-      "  \"Hamburger\"                    1.84   3.5  \n",
-      "  \"Fish Sandwich\"                1.44   5.0  \n",
-      "  \"Chicken Sandwich\"             2.29   7.3  \n",
-      "  \"Fries\"                         .77   2.6  \n",
-      "  \"Sausage Biscuit\"              1.29   4.1  \n",
-      "  \"Lowfat Milk\"                   .60   8.0 \n",
-      "  \"Orange Juice\"                  .72  12.0 ;\n",
-      "\n",
-      "param Vmax := 75.0;\n",
-      "\n",
-      "param:  N:       Nmin   Nmax :=\n",
-      "        Cal      2000      .\n",
-      "        Carbo     350    375\n",
-      "        Protein    55      .\n",
-      "        VitA      100      .\n",
-      "        VitC      100      .\n",
-      "        Calc      100      .\n",
-      "        Iron      100      . ;\n",
-      "\n",
-      "param a:\n",
-      "                               Cal  Carbo Protein   VitA   VitC  Calc  Iron :=\n",
-      "  \"Cheeseburger\"               510     34     28     15      6    30    20\n",
-      "  \"Ham Sandwich\"               370     35     24     15     10    20    20\n",
-      "  \"Hamburger\"                  500     42     25      6      2    25    20\n",
-      "  \"Fish Sandwich\"              370     38     14      2      0    15    10\n",
-      "  \"Chicken Sandwich\"           400     42     31      8     15    15     8\n",
-      "  \"Fries\"                      220     26      3      0     15     0     2\n",
-      "  \"Sausage Biscuit\"            345     27     15      4      0    20    15\n",
-      "  \"Lowfat Milk\"                110     12      9     10      4    30     0\n",
-      "  \"Orange Juice\"                80     20      1      2    120     2     2 ;\n"
+      "F: ['Cheeseburger', 'Ham Sandwich', 'Hamburger', 'Fish Sandwich', 'Chicken Sandwich', 'Fries', 'Sausage Biscuit', 'Lowfat Milk', 'Orange Juice']\n",
+      "==============================\n",
+      "c: {'Cheeseburger': 1.84, 'Ham Sandwich': 2.19, 'Hamburger': 1.84, 'Fish Sandwich': 1.44, 'Chicken Sandwich': 2.29, 'Fries': 0.77, 'Sausage Biscuit': 1.29, 'Lowfat Milk': 0.6, 'Orange Juice': 0.72}\n",
+      "==============================\n",
+      "V: {'Cheeseburger': 4.0, 'Ham Sandwich': 7.5, 'Hamburger': 3.5, 'Fish Sandwich': 5.0, 'Chicken Sandwich': 7.3, 'Fries': 2.6, 'Sausage Biscuit': 4.1, 'Lowfat Milk': 8.0, 'Orange Juice': 12.0}\n",
+      "==============================\n",
+      "Vmax: 75.0\n",
+      "==============================\n",
+      "N: ['Cal', 'Carbo', 'Protein', 'VitA', 'VitC', 'Calc', 'Iron']\n",
+      "==============================\n",
+      "Nmin: {'Cal': 2000, 'Carbo': 350, 'Protein': 55, 'VitA': 100, 'VitC': 100, 'Calc': 100, 'Iron': 100}\n",
+      "==============================\n",
+      "Nmax: {'Carbo': 375}\n",
+      "==============================\n",
+      "a: {('Cheeseburger', 'Cal'): 510, ('Ham Sandwich', 'Cal'): 370, ('Hamburger', 'Cal'): 500, ('Fish Sandwich', 'Cal'): 370, ('Chicken Sandwich', 'Cal'): 400, ('Fries', 'Cal'): 220, ('Sausage Biscuit', 'Cal'): 345, ('Lowfat Milk', 'Cal'): 110, ('Orange Juice', 'Cal'): 80, ('Cheeseburger', 'Carbo'): 34, ('Ham Sandwich', 'Carbo'): 35, ('Hamburger', 'Carbo'): 42, ('Fish Sandwich', 'Carbo'): 38, ('Chicken Sandwich', 'Carbo'): 42, ('Fries', 'Carbo'): 26, ('Sausage Biscuit', 'Carbo'): 27, ('Lowfat Milk', 'Carbo'): 12, ('Orange Juice', 'Carbo'): 20, ('Cheeseburger', 'Protein'): 28, ('Ham Sandwich', 'Protein'): 24, ('Hamburger', 'Protein'): 25, ('Fish Sandwich', 'Protein'): 14, ('Chicken Sandwich', 'Protein'): 31, ('Fries', 'Protein'): 3, ('Sausage Biscuit', 'Protein'): 15, ('Lowfat Milk', 'Protein'): 9, ('Orange Juice', 'Protein'): 1, ('Cheeseburger', 'VitA'): 15, ('Ham Sandwich', 'VitA'): 15, ('Hamburger', 'VitA'): 6, ('Fish Sandwich', 'VitA'): 2, ('Chicken Sandwich', 'VitA'): 8, ('Fries', 'VitA'): 0, ('Sausage Biscuit', 'VitA'): 4, ('Lowfat Milk', 'VitA'): 10, ('Orange Juice', 'VitA'): 2, ('Cheeseburger', 'VitC'): 6, ('Ham Sandwich', 'VitC'): 10, ('Hamburger', 'VitC'): 2, ('Fish Sandwich', 'VitC'): 0, ('Chicken Sandwich', 'VitC'): 15, ('Fries', 'VitC'): 15, ('Sausage Biscuit', 'VitC'): 0, ('Lowfat Milk', 'VitC'): 4, ('Orange Juice', 'VitC'): 120, ('Cheeseburger', 'Calc'): 30, ('Ham Sandwich', 'Calc'): 20, ('Hamburger', 'Calc'): 25, ('Fish Sandwich', 'Calc'): 15, ('Chicken Sandwich', 'Calc'): 15, ('Fries', 'Calc'): 0, ('Sausage Biscuit', 'Calc'): 20, ('Lowfat Milk', 'Calc'): 30, ('Orange Juice', 'Calc'): 2, ('Cheeseburger', 'Iron'): 20, ('Ham Sandwich', 'Iron'): 20, ('Hamburger', 'Iron'): 20, ('Fish Sandwich', 'Iron'): 10, ('Chicken Sandwich', 'Iron'): 8, ('Fries', 'Iron'): 2, ('Sausage Biscuit', 'Iron'): 15, ('Lowfat Milk', 'Iron'): 0, ('Orange Juice', 'Iron'): 2}\n",
+      "==============================\n"
      ]
     }
    ],
    "source": [
-    "!cat diet_data.dat"
+    "data = DataPortal()\n",
+    "data.load(filename=\"data/diet.dat\", model=model)\n",
+    "for k, v in data.items():\n",
+    "    print(f\"{k}: {v}\")\n",
+    "    print(\"=\" * 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solving"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
+      "    function to express ranged inequality expressions. (called from <ipython-\n",
+      "    input-20-3383a4e93487>:3)\n",
+      "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
+      "    function to express ranged inequality expressions. (called from <ipython-\n",
+      "    input-20-3383a4e93487>:3)\n",
+      "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
+      "    function to express ranged inequality expressions. (called from <ipython-\n",
+      "    input-20-3383a4e93487>:3)\n",
+      "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
+      "    function to express ranged inequality expressions. (called from <ipython-\n",
+      "    input-20-3383a4e93487>:3)\n",
+      "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
+      "    function to express ranged inequality expressions. (called from <ipython-\n",
+      "    input-20-3383a4e93487>:3)\n",
+      "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
+      "    function to express ranged inequality expressions. (called from <ipython-\n",
+      "    input-20-3383a4e93487>:3)\n",
+      "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
+      "    function to express ranged inequality expressions. (called from <ipython-\n",
+      "    input-20-3383a4e93487>:3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Problem': [{'Name': 'unknown', 'Lower bound': 15.05, 'Upper bound': 15.05, 'Number of objectives': 1, 'Number of constraints': 10, 'Number of variables': 10, 'Number of nonzeros': 77, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Termination condition': 'optimal', 'Statistics': {'Branch and bound': {'Number of bounded subproblems': '23', 'Number of created subproblems': '23'}}, 'Error rc': 0, 'Time': 0.03184914588928223}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "instance = model.create_instance(data=data, name=\"The Diet Problem\")\n",
+    "opt = SolverFactory(\"glpk\")\n",
+    "opt.solve(instance)"
+   ]
   }
  ],
  "metadata": {
