doc: watermak on notebooks

--- a/diet-problem.ipynb
+++ b/diet-problem.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -235,34 +235,34 @@
      "text": [
       "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
       "    function to express ranged inequality expressions. (called from <ipython-\n",
-      "    input-20-3383a4e93487>:3)\n",
+      "    input-7-3383a4e93487>:3)\n",
       "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
       "    function to express ranged inequality expressions. (called from <ipython-\n",
-      "    input-20-3383a4e93487>:3)\n",
+      "    input-7-3383a4e93487>:3)\n",
       "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
       "    function to express ranged inequality expressions. (called from <ipython-\n",
-      "    input-20-3383a4e93487>:3)\n",
+      "    input-7-3383a4e93487>:3)\n",
       "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
       "    function to express ranged inequality expressions. (called from <ipython-\n",
-      "    input-20-3383a4e93487>:3)\n",
+      "    input-7-3383a4e93487>:3)\n",
       "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
       "    function to express ranged inequality expressions. (called from <ipython-\n",
-      "    input-20-3383a4e93487>:3)\n",
+      "    input-7-3383a4e93487>:3)\n",
       "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
       "    function to express ranged inequality expressions. (called from <ipython-\n",
-      "    input-20-3383a4e93487>:3)\n",
+      "    input-7-3383a4e93487>:3)\n",
       "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
       "    function to express ranged inequality expressions. (called from <ipython-\n",
-      "    input-20-3383a4e93487>:3)\n"
+      "    input-7-3383a4e93487>:3)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'Problem': [{'Name': 'unknown', 'Lower bound': 15.05, 'Upper bound': 15.05, 'Number of objectives': 1, 'Number of constraints': 10, 'Number of variables': 10, 'Number of nonzeros': 77, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Termination condition': 'optimal', 'Statistics': {'Branch and bound': {'Number of bounded subproblems': '23', 'Number of created subproblems': '23'}}, 'Error rc': 0, 'Time': 0.03184914588928223}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
+       "{'Problem': [{'Name': 'unknown', 'Lower bound': 15.05, 'Upper bound': 15.05, 'Number of objectives': 1, 'Number of constraints': 10, 'Number of variables': 10, 'Number of nonzeros': 77, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Termination condition': 'optimal', 'Statistics': {'Branch and bound': {'Number of bounded subproblems': '23', 'Number of created subproblems': '23'}}, 'Error rc': 0, 'Time': 0.023923873901367188}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,6 +272,57 @@
     "opt = SolverFactory(\"glpk\")\n",
     "opt.solve(instance)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last updated: 2020-12-20\n",
+      "\n",
+      "Python implementation: CPython\n",
+      "Python version       : 3.8.5\n",
+      "IPython version      : 7.19.0\n",
+      "\n",
+      "Compiler    : Clang 10.0.0 \n",
+      "OS          : Darwin\n",
+      "Release     : 20.1.0\n",
+      "Machine     : x86_64\n",
+      "Processor   : i386\n",
+      "CPU cores   : 4\n",
+      "Architecture: 64bit\n",
+      "\n",
+      "Hostname: JHCookMac.local\n",
+      "\n",
+      "Git branch: master\n",
+      "\n",
+      "pyomo: 5.7.2\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext watermark\n",
+    "%watermark -d -u -v -iv -b -h -m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
