--- a/diet-problem.ipynb
+++ b/diet-problem.ipynb
@@ -15,10 +15,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
+    "import re\n",
+    "\n",
     "from pyomo import environ as pyo\n",
     "from pyomo.dataportal import DataPortal\n",
     "from pyomo.opt import SolverFactory\n",
     "\n",
+    "random.seed(123)\n",
     "infinity = float(\"inf\")"
    ]
   },
@@ -28,7 +32,7 @@
    "source": [
     "## Problem\n",
     "\n",
-    "Satisfy the daily nutrient requiremennts at a minimum cost.\n",
+    "Satisfy the daily nutrient requirements at a minimum cost.\n",
     "\n",
     "### Sets\n",
     "\n",
@@ -253,31 +257,38 @@
       "    input-7-3383a4e93487>:3)\n",
       "WARNING: DEPRECATED: Chained inequalities are deprecated. Use the inequality()\n",
       "    function to express ranged inequality expressions. (called from <ipython-\n",
-      "    input-7-3383a4e93487>:3)\n"
+      "    input-7-3383a4e93487>:3)\n",
+      "\n",
+      "Problem: \n",
+      "- Name: unknown\n",
+      "  Lower bound: 15.05\n",
+      "  Upper bound: 15.05\n",
+      "  Number of objectives: 1\n",
+      "  Number of constraints: 10\n",
+      "  Number of variables: 10\n",
+      "  Number of nonzeros: 77\n",
+      "  Sense: minimize\n",
+      "Solver: \n",
+      "- Status: ok\n",
+      "  Termination condition: optimal\n",
+      "  Statistics: \n",
+      "    Branch and bound: \n",
+      "      Number of bounded subproblems: 23\n",
+      "      Number of created subproblems: 23\n",
+      "  Error rc: 0\n",
+      "  Time: 0.01696300506591797\n",
+      "Solution: \n",
+      "- number of solutions: 0\n",
+      "  number of solutions displayed: 0\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Problem': [{'Name': 'unknown', 'Lower bound': 15.05, 'Upper bound': 15.05, 'Number of objectives': 1, 'Number of constraints': 10, 'Number of variables': 10, 'Number of nonzeros': 77, 'Sense': 'minimize'}], 'Solver': [{'Status': 'ok', 'Termination condition': 'optimal', 'Statistics': {'Branch and bound': {'Number of bounded subproblems': '23', 'Number of created subproblems': '23'}}, 'Error rc': 0, 'Time': 0.023923873901367188}], 'Solution': [OrderedDict([('number of solutions', 0), ('number of solutions displayed', 0)])]}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "instance = model.create_instance(data=data, name=\"The Diet Problem\")\n",
     "opt = SolverFactory(\"glpk\")\n",
-    "opt.solve(instance)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
+    "solution = opt.solve(instance)\n",
+    "print(solution)"
    ]
   },
   {
@@ -289,7 +300,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last updated: 2020-12-20\n",
+      "cost: $15.05\n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in instance.component_data_objects(pyo.Objective, active=True):\n",
+    "    print(f\"{v.name}: ${pyo.value(v)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cheeseburger: 4.0\n",
+      "Fish Sandwich: 1.0\n",
+      "Fries: 5.0\n",
+      "Lowfat Milk: 4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in instance.component_data_objects(pyo.Var, active=True):\n",
+    "    if v.value > 0:\n",
+    "        name = re.sub(r\"[x\\[|\\]]\", \"\", v.name)\n",
+    "        print(f\"{name}: {v.value}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last updated: 2020-12-21\n",
       "\n",
       "Python implementation: CPython\n",
       "Python version       : 3.8.5\n",
@@ -308,6 +367,7 @@
       "Git branch: master\n",
       "\n",
       "pyomo: 5.7.2\n",
+      "re   : 2.2.1\n",
       "\n"
      ]
     }
@@ -316,13 +376,6 @@
     "%load_ext watermark\n",
     "%watermark -d -u -v -iv -b -h -m"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
